3822B1FI2/8_integral_kokkos/khokhlov_andrey/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/8_integral_kokkos/khokhlov_andrey/integral_kokkos.cpp:17:9: error: use of undeclared identifier 'total_sum'
   17 |         total_sum
      |         ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/8_integral_kokkos/khokhlov_andrey/integral_kokkos.cpp:15:37: error: reference to local variable 'midpoint_x' declared in enclosing lambda expression
   15 |             accumulator += std::sin(midpoint_x) * std::cos(midpoint_y)*step_size*step_size;
      |                                     ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/8_integral_kokkos/khokhlov_andrey/integral_kokkos.cpp:10:51: note: while substituting into a lambda expression here
   10 |         KOKKOS_LAMBDA(int id, float& accumulator) {
      |                                                   ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/8_integral_kokkos/khokhlov_andrey/integral_kokkos.cpp:13:19: note: 'midpoint_x' declared here
   13 |             float midpoint_x = start + step_size * (static_cast<float>(idx) + 0.5f);
      |                   ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/8_integral_kokkos/khokhlov_andrey/integral_kokkos.cpp:15:60: error: reference to local variable 'midpoint_y' declared in enclosing lambda expression
   15 |             accumulator += std::sin(midpoint_x) * std::cos(midpoint_y)*step_size*step_size;
      |                                                            ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/8_integral_kokkos/khokhlov_andrey/integral_kokkos.cpp:14:19: note: 'midpoint_y' declared here
   14 |             float midpoint_y = start + step_size * (static_cast<float>(idi) + 0.5f);
      |                   ^
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/8_integral_kokkos/khokhlov_andrey/integral_kokkos.cpp:20:31: error: use of undeclared identifier 'total_sum'
   20 |     Kokkos::deep_copy(result, total_sum);
      |                               ^
4 errors generated.
